src/styles/base/_typography.scss
body {
  color: white;
  font-size: 1rem;
  font-family: 'Maven Pro', sans-serif;
}

h1,
.contact__mail {
  font-size: 3rem;
  font-family: 'Ampersand-light';

  @include breakpoint-up(medium) {
    font-size: 6rem;
  }

  @include breakpoint-up(large) {
    font-size: 7rem;
  }

  @include breakpoint-up(xlarge) {
    font-size: 8.5rem;
  }
}

h2 {
  font-size: 1rem;
  font-family: 'Ampersand-light';

  @include breakpoint-up(medium) {
    font-size: 1.5rem;
  }
}

a,
h3,
.navbar__link {
  color: white;
  font-size: 0.875rem;
  font-family: 'Ampersand-light';

  @include breakpoint-up(medium) {
    font-size: 1.3rem;
  }
}

h1,
h2,
h3 {
  padding: 0;
  margin: 0;
}

.projectmodal__url {
  a {
    color: white;
    font-size: 1rem;
    font-family: 'Maven Pro', sans-serif;

    @include breakpoint-up(large) {
      font-size: 1.3rem;
    }
  }
}

